@@ -1,0 +1,9 @@
+Title: Sidebar: Bottom of last snapin was not 100% visible
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482246812
+Class: fix
+
+
