@@ -17,6 +17,7 @@
     * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
     * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
     * 4004 FIX: Fixed exception when viewing availability of BI aggregations...
+    * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
 
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
